# nix-dots

./: .gitignore  README.md  config.nix  config2.nix  configuration.nix  flake.nix  hardware-configuration.nix  home.nix
.config/fish/: config.fish  fish_variables
.config/hypr/: hyprlock.conf
.config/kitty/: kitty.conf
.git-bak/: COMMIT_EDITMSG  FETCH_HEAD  config  index
.git-bak/hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  (+2 more)
caelestia/: flake.nix
home/: configs.nix  desktop.nix  packages.nix
iso/: minimal.nix
lib/: config-builder.nix
modules/: bootloader.nix  desktop.nix  filesystems.nix  fonts.nix  hardware.nix  networking.nix  nix.nix  packages.nix  security.nix  users.nix
modules/home/profiles/caelestia/caelestia-cli/: .envrc  README.md  default.nix  flake.nix  pyproject.toml
modules/home/profiles/caelestia/caelestia-cli/completions/: caelestia.fish
modules/home/profiles/caelestia/caelestia-cli/src/caelestia/: parser.py
modules/home/profiles/caelestia/caelestia-cli/src/caelestia/subcommands/: record.py  resizer.py  shell.py  toggle.py
modules/home/profiles/caelestia/caelestia-cli/src/caelestia/utils/: notify.py  paths.py  scheme.py  theme.py  version.py  wallpaper.py
nix/: configs.nix  configuration.nix  flake.nix  home.nix
nixos/: configuration.nix  flake.nix
overlays/: default.nix
test/: flake.nix  home.nix
(+292 files in other folders)
