[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "caelestia"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "pillow",
    "materialyoucolor"
]

[project.scripts]
caelestia = "caelestia:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "completions",
    "README.md"
]

[tool.ruff]
line-length = 120
